--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <div class="app">
         <nav class="navbar">
             <div class="navbar__logo">
-                <h4>Daniel Suguimoto</h4>
+                <img src="assets/logo-branco.png">
+                <h4>Daniel&nbsp;Suguimoto</h4>
             </div>
 
             <ul class="navbar__links">
-                <li><a href="#">Ínicio</a></li>
+                <li><a href="#home">Ínicio</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Trabalho</a></li>
                 <li><a href="#">Contato</a></li>
@@ -29,6 +30,16 @@
                 <i class="fas fa-times"></i>
             </div>
         </nav>
+
+        <div id="home">
+            <img class="home__avatar" src="assets/avatar.png">
+
+            <div class="home__description">
+                <img class="home__description__logo" src="assets/logo-preto.png">
+                <h1 class="home__description__name">Daniel Jun&nbsp;Suguimoto</h1>
+                <h2 class="home__description__role">Fullstack&nbsp;Developer</h2>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
