--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h4>Daniel&nbsp;Suguimoto</h4>
             </div>
 
-            <ul class="navbar__links">
+            <!-- <ul class="navbar__links">
                 <li><a href="#home">Ínicio</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Trabalho</a></li>
@@ -28,7 +28,7 @@
             <div class="navbar__burguer">
                 <i class="fas fa-bars"></i>
                 <i class="fas fa-times"></i>
-            </div>
+            </div> -->
         </nav>
 
         <div id="home">
