--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Daniel Jun Suguimoto</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="flex flex-col min-h-screen max-h-screen"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
