--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Jun Suguimoto</title>
-  <script type="module" crossorigin src="/assets/index.5e184570.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.3d2be5bb.js">
-  <link rel="stylesheet" href="/assets/index.fb7dd9d5.css">
+  <script type="module" crossorigin src="/assets/index.249392d9.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.7e766eae.js">
+  <link rel="stylesheet" href="/assets/index.b7522e41.css">
 </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="flex flex-col min-h-screen max-h-screen"></div>
     
   </body>
 </html>
